added swagger to project, JWT auth configured